docker/rocm-mi308x-glm52/pd-test-zw/pd-test-mtp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pd-test-mtp
  namespace: kube-system
spec:
  hostNetwork: true
  dnsPolicy: ClusterFirstWithHostNet
  nodeName: node-21.234.170.103
  restartPolicy: Never
  containers:
    - name: test
      image: mirrors.tencent.com/ti-platform/sglang-glm52-308x@sha256:2efafd08077b3565d29f978a1d7c60670f9503804c3406927853c305e5a6a391
      imagePullPolicy: IfNotPresent
      command: ["/bin/bash", "-c"]
      args:
        - |
          [...]
